--- a/src/SignalRDemo.Data/SignalRDemo.Data.csproj
+++ b/src/SignalRDemo.Data/SignalRDemo.Data.csproj
@@ -4,4 +4,10 @@
     <TargetFramework>netstandard2.0</TargetFramework>
   </PropertyGroup>
 
+  <ItemGroup>
+    <None Update="Resources\Users.txt">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
+  </ItemGroup>
+
 </Project>
